2001-02-14  Torbjorn Granlund  <tege@swox.com>

	* mpn/mips3/sqr_diagonal.asm: New file.

2001-02-12  Torbjorn Granlund  <tege@swox.com>

	* mpn/powerpc32/sqr_diagonal.asm: New file.

	* mpn/generic/sqr_basecase.c: Remove declaration of mpn_sqr_diagonal.
	Fix typo in header comment.

2001-02-12  Kevin Ryde  <kevin@swox.se>

	* mpn/generic/mul.c, mpn/generic/mul_n.c, gmp-impl.h: Use
	mpn_mul_basecase for squaring below new BASECASE_SQR_THRESHOLD.
	* tune/tuneup.c gmp-impl.h: Tune BASECASE_SQR_THRESHOLD.

	* Makefile.am (libgmp.la, libmp.la): Revert change to build from
	mpn/libmpn.la etc, go back to explicitly listed objects.

	* configure.in: Recognise sparc64-*-*, not just sparc64-*-linux*.

2001-02-11  Torbjorn Granlund  <tege@swox.com>

	* mpn/asm-defs.m4 (sqr_diagonal): New define_mpn.

	* mpn/alpha/sqr_diagonal.asm: New file.

2001-02-11  Kevin Ryde  <kevin@swox.se>

	* gmp.texi (Low-level Functions): Note mpn_get_str clobbers its input
	plus 1 extra limb.

	* mpfr/add.c,agm.c,exp2.c,exp3.c,generic.c,log2.c,pi.c,print_raw.c,
	set_d.c,sin_cos.c,sqrtrem.c,sub.c: Apply some tweaks for K&R.
	* tests/mpz/reuse.c, tests/mpq/t-md_2exp.c, demos/pexpr.c,
	demos/expr/t-expr.c: Ditto.

	* configure.in (HAVE_ABI_$abi): New define in config.m4.

	* gmp-impl.h (mpn_sqr_diagonal): Add prototype and define.
	* tune/speed.c,speed.h,common.c,many.pl: Add measuring of
	mpn_sqr_diagonal.

	* gmp.texi, acinclude.m4: Mention x86 solaris 2.7 has the reg->reg
	movq bug the same as 2.6.

	* mpfr/Makefile.am (EXTRA_DIST): Add mpfr-test.h and mpf2mpfr.h.

	* mpn/x86/README: Merge contents of README.family.
	* mpn/x86/README.family: Remove file.

	* mpn/Makefile.am (nodist_libdummy_la_SOURCES): Add mode1o, gcd_finda,
	invert_limb, sqr_diagonal; remove mod_1_rs; sort alphabetically.

2001-02-10  Torbjorn Granlund  <tege@swox.com>

	* configure.in (gmp_mpn_functions_optional): List sqr_diagonal.

	* mpn/powerpc32/aix.m4: Use unnamed csects.
	* mpn/powerpc64/aix.m4: Likewise.
